--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,23 +1,28 @@
-Package: hiplotlib
 Type: Package
-Title: An Implementation of Parsing and Writing Configuration File (JSON/INI/YAML/TOML)
+Package: hiplotlib
+Title: An Implementation of Parsing and Writing Configuration File
+    (JSON/INI/YAML/TOML)
 Version: 0.1.0
-Authors@R: person("Hiplot", "Team", email = "admin@hiplot.org", role = c("aut", "cre"))
-Description:
-    Infrastructure functions for Hiplot plot system.
-Depends:
-    R (>= 3.3.0)
+Authors@R: 
+    person("Hiplot", "Team", , "admin@hiplot.org", role = c("aut", "cre"))
+Description:Infrastructure functions for Hiplot plot system.
+License: MIT + file LICENSE
 URL: https://github.com/hiplot/hiplotlib
 BugReports: https://github.com/hiplot/hiplotlib/issues
-License: MIT + file LICENSE
+Depends:
+    R (>= 3.3.0)
+Imports:
+    glue,
+    rlang,
+    utils
+Suggests: 
+    knitr,
+    prettydoc,
+    rmarkdown,
+    testthat
+VignetteBuilder: 
+    knitr
 Encoding: UTF-8
 LazyData: true
-Imports:
-    utils,
-    glue
-RoxygenNote: 7.1.1
-Suggests: testthat,
-    knitr,
-    rmarkdown,
-    prettydoc
-VignetteBuilder: knitr
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.1.2
