--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,14 +5,16 @@ Title: An Implementation of Parsing and Writing Configuration File
 Version: 0.1.0
 Authors@R: 
     person("Hiplot", "Team", , "admin@hiplot.org", role = c("aut", "cre"))
-Description:Infrastructure functions for Hiplot plot system.
+Description: Infrastructure functions for Hiplot plot system.
 License: MIT + file LICENSE
 URL: https://github.com/hiplot/hiplotlib
 BugReports: https://github.com/hiplot/hiplotlib/issues
 Depends:
     R (>= 3.3.0)
 Imports:
+    extrafont,
     glue,
+    R.utils,
     rlang,
     utils
 Suggests: 
