--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,35 +1,47 @@
 Type: Package
 Package: hiplotlib
-Title: An Implementation of Parsing and Writing Configuration File
-    (JSON/INI/YAML/TOML)
+Title: Native Plugin Backend of Hiplot Platform
 Version: 0.1.0
 Authors@R: 
     person("Hiplot", "Team", , "admin@hiplot.org", role = c("aut", "cre"))
-Description: Infrastructure functions for Hiplot plot system.
+Description: Infrastructure settings, functions and utilities for Hiplot
+    platform.
 License: MIT + file LICENSE
 URL: https://github.com/hiplot/hiplotlib
 BugReports: https://github.com/hiplot/hiplotlib/issues
 Depends:
     R (>= 3.3.0)
 Imports:
+    callr,
     circlize,
     cowplot,
     data.table,
+    export,
     extrafont,
+    futile.logger,
     ggplot2,
     ggprism,
     glue,
     gplots,
     grafify,
     grid,
-    pacman,
+    htmlwidgets,
+    jsonlite,
+    magrittr,
+    openxlsx,
+    optparse,
     patchwork,
+    plotly,
     R.utils,
     randomcoloR,
     RColorBrewer,
+    readxl,
     rlang,
+    sessioninfo,
     stringr,
-    utils
+    utils,
+    webshot,
+    xfun
 Suggests: 
     knitr,
     prettydoc,
