modify workflow related code and add example plugin before debugging

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,10 +40,12 @@ Imports:
     sessioninfo,
     stringr,
     utils,
+    uuid,
     webshot,
     xfun
 Suggests: 
     knitr,
+    pacman,
     prettydoc,
     rmarkdown,
     testthat
