--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(col_tag)
 export(colname2data)
 export(custom_color_filter)
 export(data_arg_preprocess)
+export(deploy)
 export(draw_map)
 export(export_directory)
 export(export_htmlwidget)
@@ -99,5 +100,6 @@ importFrom(stringr,str_split)
 importFrom(stringr,str_sub)
 importFrom(utils,head)
 importFrom(utils,packageDescription)
+importFrom(utils,packageVersion)
 importFrom(utils,str)
 importFrom(webshot,webshot)
