--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,7 +61,11 @@ export(system_safe)
 export(transform_val)
 export(transparentColor)
 export(update_task_status)
+import(R.utils)
 import(ggplot2)
+import(optparse)
+import(patchwork)
+import(uuid)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(RColorBrewer,brewer.pal.info)
 importFrom(callr,r_safe)
