Added `unlist_and_covert()` to help clean data from UI.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ export(split_pdfs)
 export(system_safe)
 export(transform_val)
 export(transparentColor)
+export(unlist_and_covert)
 export(update_task_status)
 import(R.utils)
 import(ggplot2)
