--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,9 +50,10 @@ Suggests:
     rmarkdown,
     rstudioapi,
     testthat
+Remotes: tomwenseleers/export
 VignetteBuilder: 
     knitr
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.0
