--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: hiplotlib
 Title: Native Plugin Backend of Hiplot Platform
-Version: 0.2.1
+Version: 0.2.1-1
 Authors@R: 
     person("Hiplot", "Team", , "admin@hiplot.org", role = c("aut", "cre"))
 Description: Infrastructure settings, functions and utilities for Hiplot
