add conda_env in system_safe

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -96,6 +96,8 @@ importFrom(openxlsx,createWorkbook)
 importFrom(openxlsx,saveWorkbook)
 importFrom(openxlsx,writeData)
 importFrom(plotly,ggplotly)
+importFrom(reticulate,py_config)
+importFrom(reticulate,use_condaenv)
 importFrom(stats,median)
 importFrom(stats,na.omit)
 importFrom(stats,quantile)
